Add support to sync API v4